--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
-	"appid": "wx59a5cd68c9065fcc",
+	"appid": "wx59a5cd68c906521c",
 	"projectname": "%E7%89%A9%E6%B5%81",
 	"svr": "./",
 	"client": "./",
